# relaxed-equivariance-dynamics

./: .gitignore  CITATION.cff  Effect of equivariance on training dynamics (2).md  Effect of equivariance on training dynamics (3).md  Effect of equivariance on training dynamics (4).md  Effect of equivariance on training dynamics.md  Makefile  README.md  blogpost.md  environment.yaml  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  release-drafter.yml  test.yml
configs/: compute_measures.yaml  compute_measures_v2.yaml  equivariance_encouraged.yaml  hessian_spectra.yaml  train.yaml
configs/callbacks/: default_model_checkpoint.yaml  early_stopping_mae.yaml  early_stopping_rmse.yaml  model_checkpoint.yaml  model_checkpoint_2024.yaml
configs/data/: rot_mnist.yaml  smokeplume.yaml  wang2022_rotation.yaml  wang2022_scale.yaml  wang2022_translation.yaml
configs/debug/: profiler.yaml
configs/experiment/: baseline_exp_gconv.yaml
configs/logger/: wandb.yaml
configs/model/: 8c_equivariant_cnn.yaml  gcnn_classifier.yaml  wang2022_rgroup.yaml  wang2022_rsteer.yaml
configs/trainer/: default.yaml  equivariance_encourage.yaml  equivariance_encouraged.yaml  rotation.yaml
notebooks/: Regular_Octahedral_CNN.ipynb  compute_measures.ipynb  create_similar_cnn(merge_later).ipynb  data_gen.ipynb  figure_4_wang_2022_repro.ipynb  get_hessian.ipynb  hessian_spectra(good).ipynb  simple_baseline.ipynb  super_resolution.ipynb  test_dataloader.ipynb
notebooks/figure_4_checkpoints/: ConvNet_checkpoint_100  ConvNet_checkpoint_24  ConvNet_checkpoint_49  ConvNet_checkpoint_73
scripts/: get_all_v3_and_best_checkpoints.py  get_local_checkpoints.sh  get_num_params.py  plot_sharpness.py
scripts/slurm/: compute_hessian.sh  compute_sharpness.sh  echo.sh  resume.sh  train.sh  train_10.sh  train_10_seed.sh  train_multirun.sh  train_seed.sh  train_test.sh
src/: compute_measures.py  compute_measures_v2.py  equivariance_encouraged.py  hessian_spectra.py  train.py
src/data/: jhtdb_datamodule.py  rotated_mnist_datamodule.py  smokeplume_datamodule.py  wang2022_datamodule.py
src/metrics/: equivariance_error.py  hessian_spectrum.py  lie_derivative.py  sharpness.py
src/models/: image_module.py  super_resolution_module.py  wang2022_module.py  wang2024_module.py
src/pyhessian/: hessian.py  utils.py
src/utils/: group_conv.py  image_utils.py  instantiators.py  lie_utils.py  wandb.py  wandb_utils.py
tests/: conftest.py
tests/data/: test_jhtdb_dataloader.py
tests/fixtures/: images.py
tests/utils/: test_image_utils.py
wandb/run-20240522_152945-7q93jvxg/: run-7q93jvxg.wandb
(+104 files in other folders)
