[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "dl2-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
lightning = ">=2.0.0"
torchmetrics = ">=0.11.4"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
wandb = "^0.16.6"
rootutils = "^1.0.7"
pre-commit = "^3.7.0"
rich = "^13.7.1"
pytest = "^8.2.0"
matplotlib = "^3.8.4"
wurlitzer = "^3.1.0"
numpy = "^1.26.4"
setuptools = "^69.5.1"
wheel = "^0.43.0"
h5py = "^3.11.0"
datasets = "^2.19.1"
e2cnn = {git = "https://github.com/QUVA-Lab/e2cnn"}
gconv-tpk = {git = "https://github.com/dgcnz/gconv.git", develop = true}
torch-tb-profiler = "^0.4.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"
pytest-benchmark = "^4.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
